# text__1

stand/: docker-compose.yml  observability.yaml
stand/apps/gateway-api/: Dockerfile  app.py
stand/apps/orders-api/: Dockerfile  app.py  requirements.txt
stand/apps/traffic-gen/: Dockerfile  app.py
stand/discovered/: metrics.inventory.yaml  observability.suggested.yaml
stand/grafana/provisioning/dashboards/: dashboards.yml
stand/postgres/: init.sql
stand/prometheus/: prometheus.yml
yap/: pyproject.toml
yap/src/yap/: cli.py
yap/src/yap.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
yap/src/yap/config/: loader.py  schema.py
yap/src/yap/dashboards/: builder.py  export.py  promql.py  templates.py
yap/src/yap/discovery/: export.py  parser.py  suggest.py
yap/src/yap/inventory/: compose.py
yap/src/yap/modules/: base.py  registry.py
yap/src/yap/prometheus/: builder.py  catalog.py  export.py
yap/src/yap/validation/: report.py
yap/src/yap/yap.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
