[project]
name = "yap"
version = "0.3.0"
description = "Declarative observability bundle generator for Docker Compose"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
  "pydantic>=2.6",
  "typer>=0.12",
]

[project.scripts]
yap = "yap.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["yap", "yap.*"]